--- a/cacbaithuctap/css/responsive.css
+++ b/cacbaithuctap/css/responsive.css
@@ -1,10 +1,129 @@
-@media only screen and (min-width: 767px) {
-}
-header{
-   
-}
-@media only screen and (max-width: 767px) {
-
-   header{
-   
-}
+body {
+   background-color: white;
+   color: black;
+ }
+ 
+ /* Kiểu CSS áp dụng cho màn hình nhỏ hơn 768px */
+ @media (max-width: 768px) {
+   .containers{
+      display: none;
+   }
+   .header-container{
+      
+    background-size: 100%;
+   }
+   .letter{
+      display: none;
+   }
+   .footer{
+      display: none;
+   }
+   .img{
+      display: none;
+   }
+   .logo-left{
+      display: none;
+   }
+   .logo-right{
+      width: 20%;
+      margin-top: 10px;
+      margin-left: -20px;
+   }
+   .logo-right img{
+      max-width: 120%;
+   }
+   .logo-right2{
+      display: flex;
+      width: 90%;
+   }
+   .logo-right2 img{
+      margin-top: 20px;
+      width: 30px;
+      height: 30px;
+      margin-left: 150px;
+   }
+   .letter1{
+      padding-left: 10px;
+      margin-top: 10px;
+      font-size: 14px;
+      color: white;
+      width: 80%;
+   }
+   .letter2{
+      display: inline-flex;
+      width: 10%;
+      font-size: 10px;
+      color: #fff;
+   }
+   .letter2 p{
+      padding-left: 10px;
+      margin-top: 20px;
+   }
+   .button{
+      margin: 75px -320px 70px;
+   }
+   .menu{
+      margin-top: -65px;
+      margin-left: -20px;
+      display: block;
+      width: 106%;
+   }
+   .menu li{
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+   }
+   .mobile-menu-btn{
+      margin-top: -3px;
+      display: block;
+   }
+   .mobile-menu-btn:hover{
+      color: #FFB72D;
+   }
+   .mobile-menu-btn span{
+      display: block;
+      float: right;
+   }
+   .section-main{
+      margin-top: -75px;
+      padding-top: 30px;
+   }
+   .container1{
+      margin-left: -180px;
+   }
+   .container-nav-hid{
+      position: relative;
+      right: 200px;
+      display: block;
+   }
+   .container-nav-show{
+      position: relative;
+   }
+   .hidden-nav{
+      display: none;
+   }
+   .container2{
+      margin-left: -180px;
+   }
+   .content1{
+      margin-left: -150px;
+   }
+   .show-img{
+      display: none;
+   }
+   .text{
+      display: block;
+   }
+   .main-content{
+      margin-left: -135px;
+   }
+   .item1{
+      margin-left: -10px;
+   }
+   .item2{
+      display: none;
+   }
+   .content-img img{
+      
+   }
+ }
